# superteam_codex

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  RELEASE_NOTES.md  VERSION.md  hooks.json  pyproject.toml
.codex-plugin/: plugin.json
docs/: architecture.md  operating-model.md
docs/reports/: 2026-05-09-sms-hook-trace-hard-gate-failure.md
docs/specs/: 2026-04-26-superteam-codex-design.md
hooks/: codex_hook.py
pencil/quest-game/: quest-game.pen
scripts/: Install-FromGitHub.ps1  Install-SuperTeamCodex.ps1  New-ReleaseArchive.ps1  Test-SuperTeamCodex.ps1
skills/debug/: SKILL.md
skills/doctor/: SKILL.md
skills/end/: SKILL.md
skills/execute/: SKILL.md
skills/finish/: SKILL.md
skills/g1/: SKILL.md
skills/g2/: SKILL.md
skills/g3/: SKILL.md
skills/g4/: SKILL.md
skills/g5/: SKILL.md
skills/g6/: SKILL.md
skills/g7/: SKILL.md
skills/go/: SKILL.md
skills/map/: SKILL.md
skills/pause/: SKILL.md
skills/project-init/: SKILL.md
skills/project-next/: SKILL.md
skills/project-status/: SKILL.md
skills/reset/: SKILL.md
skills/resume/: SKILL.md
skills/review/: SKILL.md
skills/source-pack/: SKILL.md
skills/status/: SKILL.md
skills/verify/: SKILL.md
superteam_codex/: __init__.py  cli.py
superteam_codex/runtime/: __init__.py  agent_registry.py  doctor.py  event_tree.py  feature_ui_map.py  frame_inventory.py  g1.py  g1_guided_hooks.py  g2.py  g3.py  g4.py  (+11 more)
templates/: 01-project-definition.md  02-design.md  04-plan.md  05-execution.md
tests/: test_cli.py  test_g1_guided_hooks.py  test_g2_guided_hooks.py  test_hooks.py  test_package_version.py  test_runtime.py
(+3 files in other folders)
