[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "superteam-codex"
version = "1.1.0"
description = "Complete Codex-native SuperTeam G1-G7 hook-trace workflow runtime."
requires-python = ">=3.10"
authors = [{ name = "frankiezheng110" }]
license = { text = "MIT" }
dependencies = []

[project.scripts]
superteam-codex = "superteam_codex.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["superteam_codex*"]
