[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "superteam-codex"
version = "1.1.5"
description = "Complete Codex-native SuperTeam G1-G7 internal hook-trace workflow runtime with fixed agent definitions and structured contracts."
requires-python = ">=3.10"
authors = [{ name = "frankiezheng110" }]
license = { text = "MIT" }
dependencies = []

[project.scripts]
superteam-codex = "superteam_codex.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["superteam_codex*"]
